lang/examples/good/11_funkcje_zwracające_wartość.gt
fn f() -> [char] {
    return "Hello, World\n";
}

fn main() -> int {
    print(f());
    return 0;
}
