lang/examples/bad/ContinueOutsideLoop.gt
fn main() -> int {
    while (false) {
        print("nope\n");
    }
    continue;
    return 0;
}
